Prevent text overflow

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ html {
     min-height: 100vh;
     width: 100%;
     font-family: 'poppins', Arial, Helvetica, sans-serif;
-    --header-bg-color:#D9E4DD;
-    --book-card-bg-color:#D9E4DD;
-    --form-bg-color: #CDC9C3;
-    --main-bg-color: #FBF7F0;
+    --header-bg-color:#E4D0D0;
+    --book-card-bg-color:#bda9a9;
+    --form-bg-color: #ded4d4;
+    --main-bg-color: #F5EBEB;
+    --not-read-color: rgb(152, 0, 0);
 }
 
 button,
@@ -138,10 +139,21 @@ body {
     font-size: 1.5rem;
     display: flex;
     flex-direction: column;
-    width: max-content;
     padding: 30px 60px;
-    gap: 30px;
+    gap: 20px;
     text-align: center;
-    border: 2px solid black;
-        width:400px;
+    width:400px;
+    border-radius: 10px;
+    overflow-wrap: break-word;
 }
+
+.book-card button {
+    padding: 2px;
+    border-radius: 8px;
+    border: none;
+}
+
+.book-card button:hover {
+    background-color:;
+}
+
